--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
 		text-align:center;
 		padding:30px;
 		'>
-			<image src="https://jiangggo.github.io/Re01/mira.svg" alt="miar" width= 100px>
+			<image src="mira.svg" alt="miar" width= 100px>
 		</DIV>
 		<div style = '
 		color:purple; 
