--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>ReO1</title>
+		<title>特大喜讯！</title>
 		
 	</head>
 	
@@ -17,10 +17,9 @@
 		color:purple; 
 		margin:30px auto; padding:15px;text-align:center
 		'>
-			<p>江上何年初见月</p>
-			<p>江月何年初照人</p>
-			<p>人生代代无穷已</p>
-			<p>江月年年总相似</p>
+			<h1>特大喜讯！！</h1>
+			<h2>热烈庆祝赵心纯女士眼镜掉茅坑里辣！！</h2>
+			
 		</div>
 		
 		
