Update and rename index.html to zxc.html

--- a/zxc.html
+++ b/zxc.html
@@ -11,7 +11,7 @@
 		text-align:center;
 		padding:30px;
 		'>
-			<image src="C:\Users\ypjiang\Pictures\ui\mira.svg" alt="miar" width= 100px>
+			<image src="5ed7309c0b10c306b5fae14ba5e7add.jpg" alt="miar" width= 100px>
 		</DIV>
 		<div style = '
 		color:purple; 
