--- a/zxc.html
+++ b/zxc.html
@@ -11,13 +11,13 @@
 		text-align:center;
 		padding:30px;
 		'>
-			<image src="5ed7309c0b10c306b5fae14ba5e7add.jpg" alt="miar" width= 100px>
+			<image src="5ed7309c0b10c306b5fae14ba5e7add.jpg" alt="miar" width= 300px>
 		</DIV>
 		<div style = '
 		color:purple; 
 		margin:30px auto; padding:15px;text-align:center
 		'>
-			<h1>特大喜讯！！</h1>
+			<h1>特大喜讯！！特大喜讯！！</h1>
 			<h2>热烈庆祝赵心纯女士眼镜掉茅坑里辣！！</h2>
 			
 		</div>
@@ -28,8 +28,8 @@
 		padding:30px;
 		font-size:12px;
 		'>
-		<p>我的网站</p>
-		<a href='https://www.baidu.com'>点击跳转</a>
+		<p>眼镜掉撤硕儿了怎么办？</p>
+		<a href='https://cn.bing.com/search?q=%E7%9C%BC%E9%95%9C%E6%8E%89%E5%8E%95%E6%89%80%E9%87%8C%E6%80%8E%E4%B9%88%E5%8A%9E&qs=n&form=QBRE&sp=-1&lq=0&pq=%E7%9C%BC%E9%95%9C%E6%8E%89%E5%8E%95%E6%89%80%E9%87%8Cz%27m%27b&sc=1-11&sk=&cvid=92E86E492FE84E5E82BEC68DA36C20AC&ghsh=0&ghacc=0&ghpl='>点击搜索</a>
 		
 		</div>
 	</body>
